--- a/week5/AllTests.html
+++ b/week5/AllTests.html
@@ -6,12 +6,15 @@
 </head>
 <body>
 
-    <script src="function/function.js"></script>
-    <script src="function/functionTest.js"></script>
-
-    <script src="lambda/lambda.js"></script>
-    <script src="lambda/lambdaTest.js"></script>
-
+<script>
+    [
+        "function",
+        "lambda",
+    ].forEach( name => {
+        document.writeln("<script src='"+name+"/"+name+".js\'><" + "/script>");
+        document.writeln("<script src='"+name+"/"+name+"Test.js\'><" + "/script>");
+    });
+</script>
 
 </body>
 </html>
