--- a/week07/AllTests.html
+++ b/week07/AllTests.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <title> All Tests </title>
     <script src="util/test.js"></script>
 </head>
 <body>
 
-<h1>All Tests in Week 6</h1>
+<h1>All Tests in HtmlJs</h1>
 
 <pre>
 
@@ -14,13 +14,19 @@
 
     const testNames = [
         'object',
-        'oopsie'
+        'inheritance',
+        'util'
     ];
 
     testNames.forEach( testName => {
+
+
         document.write(`<script src="${testName}/${testName}.js"></s`+'cript>'); // dirty trick of the day
         document.write(`<script src="${testName}/${testName}Test.js"></s`+'cript>');
+
+
     });
+
     document.writeln("\nCheck possible 'compile' errors in the console .")
 
 </script>
