--- a/week08/TryTypeSystem.html
+++ b/week08/TryTypeSystem.html
@@ -10,14 +10,13 @@
 
     /**
      * @param  { Number } arg
-     * @return { * }
+     * @return { Number }
      */
     const foo = arg => {
         return (arg + 1);
     };
 
-    document.writeln( foo(42)   );
-    document.writeln( foo("42") );
+    document.writeln( foo(42) );
 
 </script>
 
