--- a/week02/scopeTest.html
+++ b/week02/scopeTest.html
@@ -9,7 +9,7 @@
 
         const test = x => document.writeln( String(x));
 
-        x = 0;  // even if done badly...
+        fetch('https://jsonplaceholder.typicode.com/todos/1') = 0;  // even if done badly...
 
         ( () => {       // IIFE for a local scope
             let x = 1;  // does not accidentally override outer scope
